// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccelerometerCallibrationManager should callibrate the device accelerometer when button is clicked 1`] = `
<button
  class="css-118n93f css-63it0p css-jwhr8m bb-Box bb-Button"
  data-testid="calibrate-acc-button"
  type="button"
>
  Calibrate Accelerometer
</button>
`;

exports[`AccelerometerCallibrationManager should callibrate the device accelerometer when button is clicked 2`] = `
<button
  aria-disabled="true"
  class="css-47if3e css-63it0p css-jwhr8m bb-Box bb-Button"
  data-testid="calibrate-acc-button"
  disabled=""
  style="pointer-events: none;"
  type="button"
>
  Calibrating...
</button>
`;

exports[`AccelerometerCallibrationManager should callibrate the device accelerometer when button is clicked 3`] = `
<button
  class="css-118n93f css-63it0p css-jwhr8m bb-Box bb-Button"
  data-testid="calibrate-acc-button"
  style=""
  type="button"
>
  Calibrate Accelerometer
</button>
`;
